exercises/07_capstone/00_overview/tests/fail/duplicate_initial.stderr
error: only one variant may be marked `#[initial]`
  --> tests/fail/duplicate_initial.rs:9:5
   |
 9 | /     #[initial]
10 | |     Green,
   | |_________^
